--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="site-copy">&copy; {{ site.time | date: '%Y' }}<span class="site-author">{{ site.author }}</span></div>
 
-  <div class="site-links">
+  //<div class="site-links">
     <div class="site-contact">
       <ul>
         {% if site.email %}
